unesco/static/css/unesco.css
/* 
spanish red: #d8302d
spanish yellow: #f2e82e
spanish black: #2a2627
*/

h1 {
    color: #D8302D;
}
.logo{text-align:right}
img.thumbnail {
    width: 90px;
    margin-bottom: 0px;
}
.thumbnail-column {
    width: 90px;
    position:absolute;
}
.description-column{
    padding-left:100px;
    height: 100px;
}

.leaflet-container {  /* all maps */
    width:  310px;
    height: 400px;
}

#thumbnailmap {
    width: 80px;
    height: 80px;
}

section {
	padding-top:60px;
	margin-top:-60px;
}

.socialbutton {
	height:40px;
	color: white;
	padding-right: 5px;
	margin-bottom: 5px;
	overflow: hidden;
}
div.socialbutton img {
	padding-right: 10px;
}
div.socialbutton a {
	text-decoration: none;
	color: white;
}
div.socialbutton a:visited {
	text-decoration: none;
}
.columnbutton {
	height:40px;
	color: white;
	text-align: center;
	text-decoration: none;
	vertical-align: middle;
	line-height: 40px;
	padding-right: 5px;
	margin-bottom: 5px;
	overflow: hidden;
}
.recordvisit {
	background-color: #d8302d;
}
.recordvisit:hover {
	background-color: #eb3431;
	text-decoration: none;
}
.google {
	background-color: #bf4232;
}
.google:hover {
	background-color: #dd4b39;
}
.email {
	background-color: #679e42;
}
.email:hover {
	background-color: #7dbf50;
}
.facebook {
	background-color: #324a80;
}
.facebook:hover {
	background-color: #3b5998;
}
.twitter {
	background-color: #0096cc;
}
.twitter:hover {
	background-color: #00aced;
}

